got file location gathering
Got singular file location gathering working, folder selection is a bit trickier

--- a/src/main/java/gui.form
+++ b/src/main/java/gui.form
@@ -4,6 +4,8 @@
   <NonVisualComponents>
     <Component class="javax.swing.JFileChooser" name="jfcSourceFile">
     </Component>
+    <Component class="javax.swing.JFileChooser" name="jfcOutput">
+    </Component>
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
@@ -114,6 +116,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Choose output folder"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnOutputLocActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JRadioButton" name="jrbBec">
       <Properties>
